# RAG_MODEL

./: Dockerfile  README.md  docker-compose.yml  requirements.txt
app/: main.py  pyproject.toml  rag_engine.py  test_chunking.ipynb
app/chroma_db/: chroma.sqlite3
app/data/: sample1.txt
